<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:title="@string/settings"
        app:titleTextColor="@color/white"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Temperature Unit -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_unit"
                android:textAppearance="@style/TextAppearance.Title"
                android:textSize="@dimen/text_size_medium" />

            <RadioGroup
                android:id="@+id/temperatureUnitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <RadioButton
                    android:id="@+id/celsiusRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius" />

                <RadioButton
                    android:id="@+id/fahrenheitRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit" />

            </RadioGroup>

            <!-- Wind Speed Unit -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/wind_speed_unit"
                android:textAppearance="@style/TextAppearance.Title"
                android:textSize="@dimen/text_size_medium" />

            <RadioGroup
                android:id="@+id/windSpeedUnitGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <RadioButton
                    android:id="@+id/kphRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kmh" />

                <RadioButton
                    android:id="@+id/mphRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mph" />

            </RadioGroup>

            <!-- Auto Update -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/autoUpdateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/auto_update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/auto_update_summary"
                android:textAppearance="@style/TextAppearance.Subtitle" />

            <!-- Notifications -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notificationsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/notifications" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/notifications_summary"
                android:textAppearance="@style/TextAppearance.Subtitle" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
